samples/_failures_safe/1761655061_9a825e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bac15d5.c: In function ‘main’:
./samples/SAFE/__tmp_0bac15d5.c:158: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_0bac15d5.c:157:5: error: expected declaration or statement at end of input
  157 |     Token tokens[MAX_TOKENS
      |     ^~~~~
